# autoplaylist

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/: release.yml
.sqlx/: query-0006a5809ac61b4fbe4dd5205c65e120d22928ac36a9823d7cd6218fc2e205b2.json  query-0030e043a7eba13fc44db1648b0dac02827e9de13aa9c2d2c771524ac4606f37.json  query-019b22c63ccfd5b5a0f1069feceeda1670f47b863e73ec333eaa0e582d1542ee.json  query-01bb009dec9f2461bbf5e4290e4c5aa0083775c00fcf2a8756199b920fa4ed6b.json  query-036cef5c8261e1fd1e0529037fd4b4013395e49927e6b13bb674fe09c5602312.json  query-09a83024181c789f2a643f2e9e5d221abf8ab41c6e956664c3ccfe8cc29302ce.json  query-0bf8093f69e4f89ba77e32ce4c0d07c7b2c2a8a2d67a59873154b59b2968a9a4.json  query-0c32689fad68780adff8f6ee660cbbdb75e0ed792297b29be00e58059915d269.json  query-1177feb6abd694e79a66bcd10b4cc5718d8dbf61e49795c8f246bff6340ca84f.json  query-16b55f9d782a7d955dbe77940ea169bdcf0c21967175b7a27f238100fe0bf01c.json  query-1a918386d94e4c3397e14ccd519078d436604e97cf7ebe383d7e385333059675.json  query-220a2795aac2461ed6f2081bd795d4628503423032f250e848b209f12965231f.json  query-27dd45adbdc81ac3a53e0f6fb647333c334eeecccfad21e4d93674d8aaef1549.json  query-2d37355b0ae76f55f57c05ae5276c3dad4c739c8b4c413332dc64455f004bc1d.json  query-2fc03c4294e01f16022b6c433532e416061747d3aae7fdbb9eb1f37fffffc4d9.json  query-342f2f135219868622685c8ea7a065e97144a5e2aa17bf1b7aecd1cd9c013b27.json  query-346240cc664d5a90f5463bae69c05f68ac2755d1169efe05f33d3268df282bac.json  query-3f24b866d5ac4b46b95c03681ec3cd4f0d65681cf20eae4023aa5c90edf4dea9.json  query-417be800fd3d1ec66cacfe202a5497ba64d762e3a1bac73827fe483a7ff00cf1.json  query-43769737baa0cf8dcc880eff928906b81e709d22f40ab6197d7d1258708bf2f8.json  query-4478d53a272495038d9d74ade9e43bfc194f297f783105842d99023e4382ea94.json  query-4769de83c2f6238d20760598fe43c13b9bbfc56eeda12515c6b8b403e3ac32ca.json  query-4cb4c1a5b117df6e7bfae6070a9070f130d0deb5788dfeb62430f0c2b819f376.json  query-4d4d1b10dc3f193571930ff4cc0f611ae13162438b6368657f2661a3f91b847b.json  query-50b01817b8100d82f25798cee299e4606ff669d8086e7b131b79c130bcc6fb27.json  query-52a0bd5ec7231e55084e4612c87583ac029e19e4d8fe3f8c9f8bdfd41c6ee7e2.json  query-579e9cbb90ea0cc8120b6613a18bbcbad17ad231aa0b8164827a39e9a77d4707.json  query-5f9ffcb16ce7077e5ccc4e73b7c7e6e45ba98dc0b60782ea4c08bf52f7e3042a.json  (+42 more)
api/: Cargo.toml
api/.cargo/: config.toml
api/db/migrations/: V1__initial.sql
api/db/queries/: base.sql  insert-base.sql  insert-query.sql  insert-user.sql  list-queries-content.sql  list-queries-total.sql  query-by-id.sql  query.sql  user-by-id.sql  user-by-spotify-email.sql
api/examples/playlist/: create.json  update.json
api/examples/track/: update.json
api/src/: auth.rs  broker.rs  cfg.rs  conv.rs  db.rs  domain.rs  dto.rs  jwt.rs  main.rs  playlist.rs  pull.rs  src.rs  usr.rs
api/src/handler/: auth.rs  mod.rs  playlist.rs  src.rs  track.rs  usr.rs
api/src/handlers/: auth.rs  base.rs  mod.rs  playlist.rs  query.rs  sync.rs
base-sync/: Cargo.toml
base-sync/.cargo/: config.toml
base-sync/src/: cfg.rs  main.rs  sync.rs
cli/: Cargo.toml
cli/resources/main/html/: close.html
cli/src/: api.rs  jwt.rs  main.rs
common/: Cargo.toml  build.rs
common/resources/main/db/pg/migrations/: 20231109_init.sql
common/resources/main/db/pg/queries/: add-track-to-playlist.sql  add-track-to-source.sql  count-playlist-ids-by-source.sql  count-playlist-tracks.sql  count-playlists-with-name-like.sql  count-playlists.sql  count-search-playlist-tracks-by-title-artists-album.sql  count-search-source-tracks-by-title-artists-album.sql  count-search-tracks-by-title-artists-album.sql  count-search-user-platform-playlists-by-name.sql  count-search-users-by-email.sql  count-source-by-last-synchronization-date.sql  count-source-by-synchronization-status.sql  count-source-tracks.sql  count-sources.sql  count-tracks.sql  count-user-platform-playlists.sql  count-user-playlists-with-name-like.sql  count-user-playlists.sql  count-user-sources.sql  count-users-by-email-rows.sql  count-users.sql  create-playlist.sql  create-source.sql  create-track.sql  create-user.sql  delete-playlist.sql  delete-source.sql  delete-track.sql  delete-tracks-from-playlist.sql  delete-tracks-from-source.sql  delete-user-platform-playlists.sql  delete-user.sql  lock-playlist-synchronization.sql  lock-source-synchronization.sql  playlist-by-id.sql  playlist-contains-track.sql  playlist-exists.sql  playlist-ids-by-source.sql  playlist-tracks.sql  (+36 more)
common/resources/test/db/: data.sql
common/src/: api.rs  lib.rs  model.rs  sigs.rs
common/src/broker/: mod.rs  rabbitmq.rs
common/src/db/: mod.rs  pg.rs
common/src/db/pg/: mod.rs  playlist.rs  src.rs  track.rs  usr.rs
common/src/spotify/: mod.rs  rspotify.rs
core/: Cargo.toml
core/db/migrations/: V1__initial.sql
core/db/postgres/migrations/: V1__initial.sql
core/db/postgres/queries/artist/: get-by-spotify-id.sql  insert.sql
core/db/postgres/queries/base/: count.sql  delete-tracks-by-id-sync-id-not.sql  get-by-id.sql  get-by-user-kind-platform.sql  list-by-user.sql  list.sql  lock-sync.sql  update-sync.sql  upsert-track.sql
core/db/postgres/queries/playlist/: count-by-user.sql  delete-tracks-by-id-sync-id-not.sql  get-by-id.sql  get-by-user-name.sql  insert-filter.sql  list-by-user.sql  lock-sync.sql  update-sync.sql  upsert-track.sql
core/db/postgres/queries/track/: get-by-spotify-id.sql  insert-artist.sql  insert.sql
core/db/postgres/queries/user/: get-by-id.sql  get-spotify-auth-by-id.sql  upsert-spotify-auth.sql
core/db/queries/: delete-query.sql  insert-playlist.sql  list-bases-content.sql  list-bases-total.sql  list-playlists-content.sql  list-queries-content.sql  playlist-by-name.sql  query-by-id.sql  query.sql
core/src/: broker.rs  db.rs  domain.rs  lib.rs
core/src/broker/: mod.rs  rabbitmq.rs
core/src/db/: mod.rs  postgres.rs
core/src/spotify/: mod.rs  rspotify.rs
sync/: Cargo.toml
sync/src/: main.rs
(+148 files in other folders)
