[package]
name = "autoplaylist-api"
edition.workspace = true
version.workspace = true

[dependencies]
actix-cors = "0.6"
actix-web = "4.3"
autoplaylist-core = { path = "../core" }
chrono = "0.4"
concat-idents = "1.1"
deadpool-postgres = "0.10"
hmac = "0.12"
lapin = "2.1"
jwt = "0.16"
opentelemetry = { version = "0.18" }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-0_8"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
regex = "1.8"
rspotify = "0.11"
securefmt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_18"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
