[package]
name = "autoplaylist-api"
edition.workspace = true
version.workspace = true

[dependencies]
actix-cors = "0.6"
actix-web = "4.3"
autoplaylist-core = { path = "../core" }
chrono = "0.4"
hmac = "0.12"
jwt = "0.16"
opentelemetry = { version = "0.18" }
regex = "1.8"
securefmt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_trim = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_18"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
