[dependencies]
anyhow = "1.0"
async-trait = "0.1"
autoplaylist-common = {path = "../common", features = ["api", "broker", "db", "sigs", "spotify"]}
axum = "0.6"
hmac = "0.12"
jwt = "0.16"
mockable = {version = "2.2", features = ["clock"]}
regex = "1.10"
sha2 = "0.10"
thiserror = "1.0"
tokio = {version = "1.33", features = ["full"]}
tower-http = {version = "0.4", features = ["cors", "trace"]}
tracing = "0.1"
uuid = "1.4"

[dev-dependencies]
autoplaylist-common = {path = "../common", features = ["test"]}
axum-test = "12.5"
chrono = "0.4"
mockable = {version = "2.2", features = ["mock"]}
mockall = "0.11"
uuid = {version = "1.4", features = ["v4"]}

[package]
name = "autoplaylist-api"
edition.workspace = true
version.workspace = true
