[dependencies]
anyhow = "1.0"
async-trait = "0.1"
autoplaylist-common = {path = "../common", features = ["api", "broker", "db"]}
chrono = "0.4"
clap = {version = "4.4", features = ["derive", "env"]}
jsonwebtoken = "9.2"
mockable = {version = "2.4", features = ["browser", "clock", "http"]}
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.33", features = ["full"]}
tracing = "0.1"
uuid = "1.4"

[dev-dependencies]
autoplaylist-common = {path = "../common", features = ["test"]}
mockable = {version = "2.4", features = ["mock"]}
mockall = "0.11"
tempdir = "0.3"
uuid = {version = "1.4", features = ["v4"]}

[package]
name = "autoplaylist"
edition.workspace = true
version.workspace = true
