[dependencies]
async-trait = {version = "0.1", optional = true}
chrono = {version = "0.4", features = ["serde"], optional = true}
enum-display = {version = "0.1", optional = true}
magic-crypt = {version = "3.1", optional = true}
mockable = {version = "2.3", features = ["mock"]}
mockall = {version = "0.11", optional = true}
rspotify = {version = "0.12", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}
sqlx = {version = "0.7", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"], optional = true}
thiserror = {version = "1.0", optional = true}
tokio = {version = "1.33", features = ["full"], optional = true}
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
uuid = {version = "1.4", features = ["serde"], optional = true}

[dev-dependencies]
mockall = "0.11"
tokio = {version = "1.33", features = ["full"]}
uuid = {version = "1.4", features = ["v4"]}

[features]
db = ["model", "dep:async-trait", "dep:magic-crypt", "dep:serde_json", "dep:sqlx", "dep:thiserror"]
model = ["dep:chrono", "dep:enum-display", "dep:serde", "dep:uuid"]
sigs = ["dep:tokio"]
spotify = ["model", "dep:async-trait", "dep:rspotify", "dep:thiserror"]
test = ["dep:mockall"]

[package]
name = "autoplaylist-common"
edition.workspace = true
version.workspace = true
