[dependencies]
mockable = "2.2"
tokio = {version = "1.33", features = ["full"], optional = true}
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}

[features]
sigs = ["dep:tokio"]

[package]
name = "autoplaylist-common"
edition.workspace = true
version.workspace = true
