[package]
name = "autoplaylist-core"
edition.workspace = true
version.workspace = true

[dependencies]
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio-current-thread"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
