[package]
name = "autoplaylist-core"
edition.workspace = true
version.workspace = true

[dependencies]
lapin = "2.1"
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio-current-thread"] }
securefmt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "0.8", features = ["serde"] }
