[package]
name = "autoplaylist-core"
edition.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
chrono = "0.4"
deadpool-postgres = "0.10"
futures = "0.3"
lapin = "2.1"
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio-current-thread"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
securefmt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["rt", "sync"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "0.8", features = ["serde"] }
