[dependencies]
anyhow = "1.0"
async-trait = "0.1"
autoplaylist-common = {path = "../common", features = ["broker", "db", "sigs", "spotify"]}
chrono = "0.4"
mockable = {version = "2.3", features = ["clock"]}
thiserror = "1.0"
tokio = {version = "1.33", features = ["full"]}
tracing = "0.1"
uuid = "1.4"

[dev-dependencies]
autoplaylist-common = {path = "../common", features = ["test"]}
mockable = {version = "2.3", features = ["mock"]}
mockall = "0.11"
uuid = {version = "1.4", features = ["v4"]}

[package]
name = "autoplaylist-sync"
edition.workspace = true
version.workspace = true
